--- a/guediao-miniprog/pages/aboutus/aboutus.wxml
+++ b/guediao-miniprog/pages/aboutus/aboutus.wxml
@@ -10,16 +10,26 @@
 
   <view class="block">
     <text class="title">关于我们</text>
+    <view class="block">
+      <text class="title-mini">我们是谁</text>
+    </view>
   </view>
   <view class="block">
     <text class="title">联系我们</text>
   </view>
 
-  <view class='body-view'>
+  <view class='block'>
+  <text class="title-mini">找到我们</text>
+
+  <view class='block'>
     <view wx:for="{{locations}}">
-      <map longitude='{{item.longt}}' latitude='{{item.latit}}' markers="{{item.markers}}"></map>
+
+      <view class='block'>
+        <map longitude='{{item.longt}}' latitude='{{item.latit}}' markers="{{item.markers}}"></map>
+      </view>
       <button id="{{index}}" type='primary' bindtap="gotoLo" class="button-me">{{goto}}{{item.name}}</button>
     </view>
+  </view>
   </view>
 
   <view class="block">
