--- a/guediao-miniprog/app.wxss
+++ b/guediao-miniprog/app.wxss
@@ -46,9 +46,14 @@
   margin:20rpx
 }
 .block{
- margin: 10px;
+ margin: 10rpx;
  text-align: center;
  align-items: center;
+}
+.block-left{
+  margin:40rpx;
+  text-align: left;
+  align-items: left;
 }
 .title{
   text-align: center;
@@ -89,4 +94,38 @@
 
 .usermotto {
   margin-top: 200px;
+}
+
+.contact-me{
+  font-size:20rpx;
+  color:#666;
+}
+.contact-item{
+
+  padding-left:100rpx;
+  padding-right: 100rpx;
+  margin-top:10rpx;
+  margin-bottom: 10rpx;
+  margin-left:auto;
+  margin-right:auto;  
+}
+.contact-image{      
+  width:24rpx;
+  height:24rpx;
+  margin-left:10rpx;
+  margin-right: 10rpx;
+}
+.contact-content{
+  width:60rpx;
+  font-size:28rpx;
+  margin-left:10rpx;
+  margin-right: 10rpx;
+  color:#aaa;
+}
+.contact-content-linkable{
+  width:60rpx;
+  font-size:28rpx;
+  margin-left:10rpx;
+  margin-right: 10rpx;
+  color:#66f
 }
